--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <title>autoAnime</title>
+    <title>番剧列表</title>
 </head>
 <body>
-    <h1>这是首页</h1>
-
+    <div>{{ anime_name }}</div>
 </body>
 </html>
+
