--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -6,7 +6,22 @@
     <title>番剧列表</title>
 </head>
 <body>
-    <div>{{ anime_name }}</div>
+    <div class="container">
+        <div class="anime-day-container" day="1">
+            <ul>
+
+            </ul>
+        </div>
+        <div class="anime-day-container" day="2"></div>
+        <div class="anime-day-container" day="3"></div>
+        <div class="anime-day-container" day="4"></div>
+        <div class="anime-day-container" day="5"></div>
+        <div class="anime-day-container" day="6"></div>
+        <div class="anime-day-container" day="7"></div>
+    </div>
 </body>
 </html>
 
+<script>
+    console.log({{ anime_list }})
+</script>
