--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -7,21 +7,32 @@
 </head>
 <body>
     <div class="container">
-        <div class="anime-day-container" day="1">
-            <ul>
-
-            </ul>
-        </div>
-        <div class="anime-day-container" day="2"></div>
-        <div class="anime-day-container" day="3"></div>
-        <div class="anime-day-container" day="4"></div>
-        <div class="anime-day-container" day="5"></div>
-        <div class="anime-day-container" day="6"></div>
-        <div class="anime-day-container" day="7"></div>
+        <ul id="1"></ul>
+        <ul id="2"></ul>
+        <ul id="3"></ul>
+        <ul id="4"></ul>
+        <ul id="5"></ul>
+        <ul id="6"></ul>
+        <ul id="7"></ul>
     </div>
 </body>
 </html>
 
 <script>
-    console.log({{ anime_list }})
+var anime_list = {{ anime_list|tojson }};
+
+function put(anime_list) {
+    for(var i=0; i<anime_list.length; i++) {
+        var img = document.createElement('img');
+        img.setAttribute("src", "img/anime_list/" + anime_list[i]["img_url"])
+        var li = document.createElement('li');
+        li.innerHTML = anime_list[i]["animeName"];
+        console.log(anime_list[i]);
+        var ul = document.getElementById(anime_list[i]["update_day"]);
+        ul.appendChild(img);
+        ul.appendChild(li);
+    }
+}
+
+put(anime_list);
 </script>
