--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="{{ url_for('static', filename='jquery/jquery.3.7.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/anime_list.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/subscribe_anime.js') }}"></script>
     <title>番剧列表</title>
 </head>
 
@@ -33,16 +33,13 @@
         width: 260px;
         float: left;
     }
-    .subscribe-icon-botton {
+    .subscribe-botton {
         float: right;
         background-color: #d6d6d6;
         border: none;
         border-radius: 5px;
         width: 30px;
         height: 30px;
-    }
-    .subscribe-icon-botton:hover {
-        background-color:#30e8c6
     }
 
 </style>
@@ -56,7 +53,7 @@
                 <img src="{{ url_for('static', filename='img/anime_list/'+anime.img_url.split('/')[4]) }}" alt="" height="400px" width="300px">
                 <div class="anime-info">
                     <div class="anime-name">{{ anime.anime_name }}</div>
-                    <button class="subscribe-botton" id="{{ anime.mikan_id }}">
+                    <button class="subscribe-botton" id="{{ anime.mikan_id }}" subscribe_status="{{ anime.subscribe_status }}" style="{{ 'background-color:red;' if anime.subscribe_status==1 }}">
                         <img src="{{ url_for('static', filename='img/icon/subscribe.svg') }}" alt="" width="20px" height="20px">
                     </button>
                 </div>
