--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="{{ url_for('static', filename='jquery/jquery.3.7.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/subscribe_anime.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/anime_list.js') }}"></script>
     <title>番剧列表</title>
 </head>
 
@@ -33,7 +33,7 @@
         width: 260px;
         float: left;
     }
-    .subscribe-botton {
+    .subscribe-button {
         float: right;
         background-color: #d6d6d6;
         border: none;
@@ -41,11 +41,25 @@
         width: 30px;
         height: 30px;
     }
+    .update-button {
+        background-color: #d6d6d6;
+        color: white;
+        font-size: 20px;
+        border: none;
+        border-radius: 5px;
+        width: 150px;
+        height: 50px;
+        margin-left: 45px;
+    }
+    .update-button:hover {
+        background-color: red;
+    }
 
 </style>
 
 <body>
     <div class="container">
+    <button class="update-button">列表更新</button>
     {% for anime in anime_list %}
     <ul>
         <li>
@@ -53,7 +67,7 @@
                 <img src="{{ url_for('static', filename='img/anime_list/'+anime.img_url.split('/')[4]) }}" alt="" height="400px" width="300px">
                 <div class="anime-info">
                     <div class="anime-name">{{ anime.anime_name }}</div>
-                    <button class="subscribe-botton" id="{{ anime.mikan_id }}" subscribe_status="{{ anime.subscribe_status }}" style="{{ 'background-color:red;' if anime.subscribe_status==1 }}">
+                    <button class="subscribe-button" id="{{ anime.mikan_id }}" subscribe_status="{{ anime.subscribe_status }}" style="{{ 'background-color:red;' if anime.subscribe_status==1 }}">
                         <img src="{{ url_for('static', filename='img/icon/subscribe.svg') }}" alt="" width="20px" height="20px">
                     </button>
                 </div>
