--- a/static/css/anime_list.css
+++ b/static/css/anime_list.css
@@ -9,18 +9,21 @@ li {
 }
 .anime-container {
     float: left;
-    height: 450px;
-    width: 300px;
+    height: 350px;
+    width: 210px;
+    /* height: 450px;
+    width: 300px; */
     margin: 0 5px 10px 5px;
 }
 .anime-info {
     height: 50px;
-    width: 300px;
+    width: 210px;
     padding-top: 5px;
 }
 .anime-name {
-    width: 260px;
+    width: 150px;
     float: left;
+    font-size: 15px;
 }
 .subscribe-button {
     float: right;
