--- a/templates/anime_list.html
+++ b/templates/anime_list.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-    <button class="update-button">列表更新</button>
+    <button class="update-button" id="3060">列表更新</button>
+    <button class="download-button">download</button>
     {% for anime in anime_list %}
     <ul>
         <li>
