--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}{{ mikan_id }}{% endblock %}
+{% block title %}番剧详情{% endblock %}
 
 {% block head %}{% endblock %}
 
-
 {% block body %}
 <div>
-    番剧信息
+    {{ mikan_id }}
 </div>
 {% endblock %}
