--- a/templates/anime.html
+++ b/templates/anime.html
@@ -10,11 +10,13 @@
 
 {% block body %}
     <button class="anime-button">列表更新</button>
-    {% for anime in anime_list %}
     <ul>
+    {% for anime in anime_list %}
         <li>
             <div class="anime-container">
-                <img src="{{ url_for('static', filename='img/anime_list/'+anime.img_url.split('/')[4]) }}" alt="" height="280px" width="210px">
+                <a href="/anime/detail/{{ anime.mikan_id }}">
+                    <img src="{{ url_for('static', filename='img/anime_list/'+anime.img_url.split('/')[4]) }}" alt="" height="280px" width="210px">
+                </a>
                 <div class="anime-info">
                     <div class="anime-name">{{ anime.anime_name }}</div>
                     <div class="button-container">
@@ -34,6 +36,6 @@
                 </div>
             </div>
         </li>
-    </ul>
     {% endfor %}
+    </ul>   
 {% endblock %}
