--- a/src/app/static/css/anime.css
+++ b/src/app/static/css/anime.css
@@ -29,7 +29,7 @@ li {
     float: right;
 }
 .subscribe-button {
-    float: right;
+    /* float: right; */
     background-color: #d6d6d6;
     border: none;
     border-radius: 5px;
@@ -56,8 +56,20 @@ li {
     border-radius: 5px;
     width: 150px;
     height: 50px;
-    margin-left: 45px;
+    margin-left: 150px;
 }
 .anime-button:hover {
     background-color: red;
+}
+.navi {
+    margin-left: 45px;
+    display: block;
+}
+.year {
+    float: left;
+    margin-right: 20px;
+}
+a {
+    text-decoration: none;
+    color: inherit;
 }
