add setting button

--- a/src/app/templates/my_anime.html
+++ b/src/app/templates/my_anime.html
@@ -30,6 +30,7 @@
                 </div>
         </div>
     {% endfor %}
+    <button class="setting-button" onclick="window.location.href='/setting'">设置</button>
     </div>
     
     <ul>
