--- a/src/app/static/css/anime.css
+++ b/src/app/static/css/anime.css
@@ -73,3 +73,16 @@ a {
     text-decoration: none;
     color: inherit;
 }
+.setting-button {
+    background-color: #d6d6d6;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    margin-left: 150px;
+}
+.setting-button:hover {
+    background-color: rgb(2, 165, 127);
+}
