--- a/src/app/templates/setting.html
+++ b/src/app/templates/setting.html
@@ -11,5 +11,10 @@
 {% block body %}
 <button class="start-button">原神启动!</button>
 <button class="stop-button">原神关闭!</button>
-<button class="modify-button">修改间隔</button>
+<!-- <button class="modify-button">修改间隔</button> -->
+<form onsubmit="submitForm(event)">
+    <label for="interval">执行间隔(min):</label>
+    <input type="text" id="interval" name="interval"><br>
+    <input type="submit" value="Submit">
+</form>
 {% endblock %}
