--- a/src/static/css/anime.css
+++ b/src/static/css/anime.css
@@ -65,10 +65,6 @@ li {
     margin-left: 45px;
     display: block;
 }
-.year {
-    float: left;
-    margin-right: 20px;
-}
 a {
     text-decoration: none;
     color: inherit;
@@ -85,4 +81,8 @@ a {
 }
 .setting-button:hover {
     background-color: rgb(2, 165, 127);
+}
+.broadcast {
+    float: left;
+    margin-left: 5px;
 }
