--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,9 +16,8 @@
     </div>
     <div class="lside-container">
         <button class="lside-button" onclick="window.location.href='/anime'">番剧</button>
-        <button class="lside-button" onclick="window.location.href='/anime'">下载</button>
+        <button class="lside-button" onclick="window.location.href='/download'">下载</button>
         <button class="lside-button" onclick="window.location.href='/setting'">设置</button>
-        <button class="lside-button" onclick="window.location.href='/anime'">日志</button>
     </div>
     <div class="container">
         {% block body %}{% endblock %}
