--- a/src/templates/download.html
+++ b/src/templates/download.html
@@ -10,18 +10,7 @@
 
 {% block body %}
 
-<table id="torrentInfo">
-    <tr>
-        <th>进度</th>
-        <th>已完成</th>
-        <th>下载速度</th>
-        <th>剩余时间</th>
-        <th>用户</th>
-        <th>做种数</th>
-        <th>大小</th>
-        <th>状态</th>
-    </tr>
-</table>
+<table id="torrentInfo"></table>
 
 {% endblock %}
 
