--- a/src/static/css/detail.css
+++ b/src/static/css/detail.css
@@ -7,6 +7,8 @@
 .anime-info {
     float: left;
     margin-left: 20px;
+    display: flex; 
+    flex-direction: column;
 }
 .anime-name {
     margin-bottom: 10px;
@@ -16,11 +18,9 @@ li {
     list-style-type: none;
 }
 .episode-container {
-    float: left;
     margin-top: 20px;
 }
 .episode {
-    margin-top: 20px;
     background-color: #d6d6d6;
     border: none;
     border-radius: 5px;
