change downloading episode color

--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -40,7 +40,7 @@
                             <div class="episode" style="background-color:rgb(41, 207, 132);">{{ episode }}</div>
                         {% elif status == 0 %}
                             <a href="/download">
-                                <div class="episode" style="background-color:orange;">{{ episode }}</div>
+                                <div class="episode" style="background-color:rgb(88, 202, 255);">{{ episode }}</div>
                             </a>
                         {% else %}
                             <div class="episode">{{ episode }}</div>
