[Feature] show daemon pid

--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -10,13 +10,14 @@
 
 {% block body %}
 <div style="margin-left: 45px;">
-<button class="start-button">原神启动!</button>
-<button class="stop-button">原神关闭!</button>
-<!-- <button class="modify-button">修改间隔</button> -->
-<form onsubmit="submitForm(event)">
-    <label for="interval">执行间隔(min):</label>
-    <input type="text" id="interval" name="interval"><br>
-    <input type="submit" value="Submit">
-</form>
+    <button class="start-button">原神启动!</button>
+    <button class="stop-button">原神关闭!</button>
+    <!-- <button class="modify-button">修改间隔</button> -->
+    <form onsubmit="submitForm(event)">
+        <label for="interval">执行间隔(min):</label>
+        <input type="text" id="interval" name="interval"><br>
+        <input type="submit" value="Submit">
+    </form>
+    <div id="daemon-pid"></div>
 </div>
 {% endblock %}
