--- a/src/static/css/detail.css
+++ b/src/static/css/detail.css
@@ -27,11 +27,14 @@ li {
     width: 30px;
     height: 30px;
     float: left;
-    margin-right: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    margin-right: 10px;
+}
+.episode:hover {
+    background-color: rgb(41, 207, 132);
 }
 .subscribe-button {
     float: left;
